force-app/main/default/objects/Proyecto_punto_de_interes__c/Proyecto_punto_de_interes__c.object-meta.xml
<CustomObject>
    <label>Proyecto punto de interes</label>
    <nameField>
        <displayFormat>PPI-{000000}</displayFormat>
        <label>Nombre de Proyecto punto de interes</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proyecto puntos de interes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>