force-app/main/default/objects/Proyecto_punto_de_interes__c/fields/Destacado__c.field-meta.xml
<CustomField>
    <fullName>Destacado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Destacado</label>
    <type>Checkbox</type>
</CustomField>