force-app/main/default/objects/Proyecto_punto_de_interes__c/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <label>Proyecto</label>
    <referenceTo>Obra__c</referenceTo>
    <relationshipLabel>Proyecto puntos de interes</relationshipLabel>
    <relationshipName>Proyecto_puntos_de_interes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>