force-app/main/default/objects/Proyecto_punto_de_interes__c/fields/Punto_de_interes__c.field-meta.xml
<CustomField>
    <fullName>Punto_de_interes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Punto de interes</label>
    <referenceTo>Punto_de_interes__c</referenceTo>
    <relationshipLabel>Proyecto puntos de interes</relationshipLabel>
    <relationshipName>Proyecto_puntos_de_interes</relationshipName>
    <type>Lookup</type>
</CustomField>